Fixed horizontal Scrollbug

--- a/style.css
+++ b/style.css
@@ -527,6 +527,7 @@
      }
      #mainCTA .CTAtext{
       font-size: 4vw;
+      color: rgba(255,255,255,0.6);
      }
      .arrow{
       color: #fff;
@@ -563,7 +564,6 @@
       width: 100%;
       color: #fff;
       margin-left: 5% !important;
-      overflow: scroll;
       
       
     }
@@ -580,9 +580,12 @@
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      width: auto;
+      
       padding-top: 0%;
       height: fit-content;
+      padding-top: 2%;
+      width: 65%;
+      
     }
     .tagContainer::-webkit-scrollbar{
       display: none;
@@ -592,15 +595,17 @@
       scrollbar-width: none; /*others*/
     }
     .tag{
+      
       font-size:3.5vw;
       margin-right:2%; 
       padding:1% 3%;
-      white-space: nowrap;
+      white-space: pre;
       border-radius: 24px;
       cursor: pointer;
       font-weight: 500;
       text-align: left;
       width: auto;
+      white-space:nowrap; 
       
       
       background-color: rgba(255,255,255,0.2);
